# aws-nitro-enclaves-rs

./: Cargo.toml  Makefile  README.md
aws-get-iam-role/: Cargo.toml
aws-get-iam-role/src/: main.rs
aws_dynamodb_kms_demo/: Cargo.toml  README.md
aws_dynamodb_kms_demo/src/scenario/: add.rs  mod.rs  query.rs
enclave/: Cargo.toml  Dockerfile  Makefile
enclave/src/: chain_eth.rs  crypto_utils.rs  kms.rs  lib.rs
parent/: Cargo.toml  Dockerfile  Makefile
parent/src/: lib.rs  protocol_helper.rs
script/: ec2-connect.sh  ec2-create-parent.sh
vsock_sample/: Cargo.toml  Dockerfile.client  Dockerfile.server  Makefile  README.md
vsock_sample/src/: lib.rs  protocol_helpers.rs
