[package]
name = "aws-get-iam-role"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.105"
tokio = { version = "1", features = ["full"] }
