[package]
name = "parent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "enclave-client"
path = "bin/enclave-client.rs"

[dependencies]
anyhow = "1.0.73"
byteorder = "1.4.3"
clap = { version = "4.3.21", features = ["derive"]}
serde_json = "1.0.104"
vsock = "0.3.0"