[package]
name = "vsock_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vsock_sample_server"
path = "bin/vsock_sample_server.rs"
src = ""

[dependencies]
byteorder = "1.4.3"
clap = "4.3.21"
libc = "0.2.147"
log = "0.4.19"
nix = "0.26.2"
vsock = "0.3.0"


