[package]
name = "vsock_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vsock-sample-server"
path = "bin/vsock-sample-server.rs"

[[bin]]
name = "vsock-sample-client"
path = "bin/vsock-sample-client.rs"

[dependencies]
anyhow = "1.0.73"
byteorder = "1.4.3"
clap = { version = "4.3.21", features = ["derive"]}
libc = "0.2.147"
log = "0.4.19"
serde_json = "1.0.104"
vsock = "0.3.0"

[profile.release]
strip = true       # Automatically strip symbols from the binary
opt-level = "s"    # Optimize for size
lto = true         # Enable link time optimization
codegen-units = 1  # Maximize size reduction optimizations
